--- a/main/templates/main/users_to_groups.html
+++ b/main/templates/main/users_to_groups.html
@@ -1,9 +1,8 @@
 {% include "main/header.html" %}
 
 {% block content %}
-    <h1>Add New Group</h1>
+    <h1>Add Users to groups</h1>
     <form method="POST" class="groups">{% csrf_token %}
-        {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
