added /main/new, form data gets added to the db redirects to index changed email model object to blank = True

--- a/main/templates/main/users_to_groups.html
+++ b/main/templates/main/users_to_groups.html
@@ -1,7 +1,8 @@
 {% include "main/header.html" %}
 
 {% block content %}
-    <h1>Add Users to groups</h1>
+    <h1>Add users to groups</h1>
+    <p>{{ data }}</p>
     <form method="POST" class="groups">{% csrf_token %}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
